Some major changes

--- a/app.kv
+++ b/app.kv
@@ -9,7 +9,7 @@
     Button:
         text: 'Play'
         font_name: "OpenSans"
-        on_press: root.play_song()
+        on_press: root.main()
     ScrollView:
         Label:
             id: lyrics_label
